Fix icon alignment

--- a/packages/portal-style/src/pages/_ticket-create.scss
+++ b/packages/portal-style/src/pages/_ticket-create.scss
@@ -39,6 +39,7 @@
   &-text {
     color: $text-color;
     margin-left: 5px;
+    vertical-align: -2px;
   }
   &-more {
     display: flex;
